--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -33,7 +33,7 @@
 
             <!-- Tarjetas Misión / Visión lado a lado -->
             <div class="col-lg-7">
-                <h3 class="text-center mb-5 fw-bold">NOSOTROS</h3>
+                <h3 class="text-center mb-5 fw-bold" id="nosotros">NOSOTROS</h3>
 
                 <div class="row g-4">
                     <!-- Misión -->
