--- a/veterinaria/app/templates/navbar.html
+++ b/veterinaria/app/templates/navbar.html
@@ -23,13 +23,13 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Imágenes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Cotización</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Testimonios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">FQA</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#nosotros">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#imagenes">Imágenes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#cotizacion">Cotización</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#testimonios">Testimonios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#preguntasFrecuentes">FQA</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
                 </ul>
 
                 <!-- derecha -->
