--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -31,7 +31,6 @@
                 </div>
             </div>
 
-            <!-- Tarjetas Misión / Visión lado a lado -->
             <div class="col-lg-7">
                 <h3 class="text-center mb-5 fw-bold" id="nosotros">NOSOTROS</h3>
 
@@ -75,7 +74,7 @@
     </section>
 
     <section class="container text-center my-5">
-        <h3 class="mb-5 fw-bold">NUESTROS SERVICIOS</h3>
+        <h3 class="mb-5 fw-bold ">NUESTROS SERVICIOS</h3>
 
         <div class="row justify-content-center g-4">
             <!-- Card 1 -->
@@ -132,22 +131,42 @@
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="4000">
                     <img src="{% static 'img/carrusel1.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 1">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
                 </div>
 
                 <div class="carousel-item" data-bs-interval="4000">
                     <img src="{% static 'img/carrusel2.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 2">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
                 </div>
 
                 <div class="carousel-item" data-bs-interval="4000">
                     <img src="{% static 'img/carrusel3.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 3">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
                 </div>
 
                 <div class="carousel-item" data-bs-interval="4000">
                     <img src="{% static 'img/carrusel4.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 4">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
                 </div>
 
                 <div class="carousel-item" data-bs-interval="4000">
                     <img src="{% static 'img/carrusel5.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 5">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
                 </div>
             </div>
 
