--- a/veterinaria/app/static/css/style.css
+++ b/veterinaria/app/static/css/style.css
@@ -37,6 +37,21 @@ body {
 }
 
 /* ====== Cards Nosotros ====== */
+#nosotros{
+  border-bottom: 3px solid #F47F76;
+  color: #404040;
+  font-weight: bold;
+  display: inline-block;
+  padding-bottom: 0.5rem;
+  margin-bottom: 1.5rem;
+  border-bottom: 3px solid #F47F76;
+}
+
+/* centrado */
+.section-nosotros {
+  text-align: center;
+}
+
 .card-nosotros{
   position:relative;
   background:
