nav chafa y corregir formato de css

--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -183,7 +183,7 @@
     </section>
 
     <section class="container my-5 text-center">
-        <h3 class="text-center fw-bold mb-4">Cotización de Servicios</h3>
+        <h3 class="text-center mb-4" id="cotizacion">Cotización de Servicios</h3>
 
         <div class="row g-2 align-items-end mb-3">
             <div class="col-auto">
@@ -632,6 +632,22 @@
     {% include 'alertas.html' %}
     {% block content %}{% endblock %}
     <script src="{% static 'js/envioFormulario.js' %}"></script>
+
+    <script>
+        // Inicializa desde memoria
+        const themeSwitch = document.getElementById('theme-switch');
+        const saved = localStorage.getItem('theme') || 'light';
+        document.documentElement.setAttribute('data-theme', saved);
+        themeSwitch.checked = saved === 'dark';
+
+        // Cambia tema al click
+        themeSwitch.addEventListener('change', () => {
+            const mode = themeSwitch.checked ? 'dark' : 'light';
+            document.documentElement.setAttribute('data-theme', mode);
+            localStorage.setItem('theme', mode);
+        });
+    </script>
+
 </body>
 
 </html>
