--- a/veterinaria/app/templates/navbar.html
+++ b/veterinaria/app/templates/navbar.html
@@ -12,7 +12,7 @@
 </head>
 
 <body >
-    <nav class="navbar navbar-sticky navbar-expand-lg bg-light border-bottom border-body">
+    <nav class="navbar navbar-sticky navbar-expand-lg navbar-petcare">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'index' %}">PetCare</a>
 
