--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -80,9 +80,9 @@
             {% for servicio in servicios %}
             <div class="col-md-4">
                 <div class="card border-0 shadow-sm p-4 h-100">
-                    <h5 class="fw-bold text-warning mb-2">"{{ servicio.nombre }}"</h5>
-                    <p class="text-muted">"{{ servicio.descripcion|default_if_none:''|escape }}"</p>
-                    <button class="btn btn-outline-dark rounded-pill px-4">"{{ servicio.precio|floatformat:2 }}"</button>
+                    <h5 class="fw-bold text-warning mb-2">{{ servicio.nombre }}</h5>
+                    <p class="text-muted">{{ servicio.descripcion|default_if_none:''|escape }}</p>
+                    <button class="btn btn-outline-dark rounded-pill px-4">${{ servicio.precio|floatformat:2 }}</button>
                 </div>
             </div>
             {% endfor %}
